py: string: enumerator()

--- a/Py/01string/mian.ipynb
+++ b/Py/01string/mian.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python388jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -201,6 +201,29 @@
    "source": [
     "print(\"Hell\" in str)\n",
     "print(\"Haven\" in str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0, 'A')\n(1, 'B')\n(2, 'C')\n(3, 'D')\n\n1 : A\n2 : B\n3 : C\n4 : D\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in enumerate(\"ABCD\"):\n",
+    "    print(e)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for i,v in enumerate(\"ABCD\"):\n",
+    "    print(f\"{i+1} : {v}\")"
    ]
   },
   {
