--- a/Py/03list/list.ipynb
+++ b/Py/03list/list.ipynb
@@ -128,8 +128,15 @@
   },
   {
    "source": [
-    "### Enumerate Funtion:\n",
-    "#### returns each item with its index postion."
+    "## Built-in Function:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### enumerate():\n",
+    "##### returns each item with its index postion."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -157,7 +164,149 @@
     "print()\n",
     "\n",
     "for i,v in enumerate(programming_lan):\n",
-    "    print(f\"{i+1}: {v}\")\n"
+    "    print(f\"{i+1}: {v}\")\n",
+    "\n",
+    "str"
+   ]
+  },
+  {
+   "source": [
+    "### any(iterable)\n",
+    "##### returns True if any element of the iterable is true. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(any([1,0]))\n",
+    "print(any([False,0,\"\",]))\n",
+    "print(any([]))"
+   ]
+  },
+  {
+   "source": [
+    "## Sorting"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5, 4, 3, 2, 1]\n[1, 2, 3, 4, 5]\n[5, 4, 3, 2, 1]\n['B', 'D', 'a', 'c', 'e']\n['a', 'B', 'c', 'D', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5]\n",
+    "\n",
+    "l.sort(reverse=True)\n",
+    "print(l)\n",
+    "l.sort()\n",
+    "print(l)\n",
+    "\n",
+    "# sorted() returns new list\n",
+    "sorted_list =sorted(l,reverse=True)\n",
+    "print(sorted_list)\n",
+    "\n",
+    "# Case-Insensitive Sorting\n",
+    "l=['a','B','e','D','c']\n",
+    "l.sort()\n",
+    "print(l)\n",
+    "l.sort(key=str.casefold)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "source": [
+    "## Generating List"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n\n['10', '11', '12', '13', '14']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists =[]\n",
+    "for i in range(1,10):\n",
+    "    lists.append(str(i))\n",
+    "print(lists)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "lists = [str(i) for i in range(10,15)]\n",
+    "print(lists)"
+   ]
+  },
+  {
+   "source": [
+    "## Creating List"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n\n[6, 5, 4, 3, 2, 1]\n\n[1, 2, 3, 4, 5, 6]\n[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3]\n",
+    "l2= [4,5,6]\n",
+    "l=l1+l2\n",
+    "print(l)\n",
+    "print()\n",
+    "\n",
+    "l3=sorted(l,reverse=True)\n",
+    "print(l3)\n",
+    "\n",
+    "# digits = list('22')\n",
+    "# print(digits)\n",
+    "\n",
+    "print()\n",
+    "copy = l[:]\n",
+    "print(copy)\n",
+    "copy =l.copy()\n",
+    "print(copy)\n",
+    "# copy() is more efficient "
    ]
   }
  ]
