--- a/Py/01string/main.ipynb
+++ b/Py/01string/main.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python388jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "name": "python3",
    "display_name": "Python 3.8.8 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
@@ -23,32 +26,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hello World\n<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
-    "#      012345678910\n",
-    "str = \"Hello World\""
+    "s = \"Hello World\"\n",
+    "print(s);\n",
+    "print(type(s))"
    ]
   },
   {
    "source": [
-    "# SLICE"
+    "# Indexing a String\n",
+    "\n",
+    "- accessing one character based on the position"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "H\ne\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s[0])\n",
+    "print(s[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# total number of character in a string\n",
+    "print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# last element of string\n",
+    "print(s[len(s) -1])"
+   ]
+  },
+  {
+   "source": [
+    "## Negative Indexing\n",
+    "\n",
+    "- writting `len(str)` is optional\n",
+    "- That's how Python give rise to Negative Indexing"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "d\nW\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s[-1]) # last character\n",
+    "print(s[-5]) # 5th last character"
+   ]
+  },
+  {
+   "source": [
+    "# String Slicing\n",
+    "\n",
+    "- extracting multiple characters from a string(sub string)\n",
+    "- Syntax: `str[start_idx : end_idx + 1]`\n",
+    "\n",
+    "> NOTE: **slice is exclusive**"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "### slice is exclusive"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "print(str[:2]) \n",
-    "print(str[0:2])"
+    "print(s[:2]) \n",
+    "print(s[0:2])"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -77,35 +178,36 @@
     }
    ],
    "source": [
-    "print(str[2:]) \n",
-    "print(str[:]) \n",
-    "print(str[:2]+str[2:]) "
+    "print(s[2:]) \n",
+    "print(s[:]) \n",
+    "print(s[:2]+s[2:]) "
    ]
   },
   {
    "source": [
-    "### Slicing with Negative Numbers"
+    "**Slicing with Negative Numbers**"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "d\n World\n Worl\n"
+      "Hello Wor\nd\n World\n Worl\n"
      ]
     }
    ],
    "source": [
-    "print(str[-1])\n",
-    "print(str[-6:])\n",
-    "print(str[-6:-1]) # left to right"
+    "print(s[:-2]) # all char exept last 2\n",
+    "print(s[-1])\n",
+    "print(s[-6:])\n",
+    "print(s[-6:-1]) # left to right"
    ]
   },
   {
@@ -129,9 +231,9 @@
     }
    ],
    "source": [
-    "print(str[::1])\n",
-    "print(str[::2])\n",
-    "print(str[1:10:2])"
+    "print(s[::1])\n",
+    "print(s[::2])\n",
+    "print(s[1:10:2])"
    ]
   },
   {
@@ -155,14 +257,14 @@
     }
    ],
    "source": [
-    "print(str[::-1])   # in reverse order\n",
-    "print(str[:-4:-1]) # last 3 char, in reverse order.\n",
-    "print(str[::-2])"
+    "print(s[::-1])   # in reverse order\n",
+    "print(s[:-4:-1]) # last 3 char, in reverse order.\n",
+    "print(s[::-2])"
    ]
   },
   {
    "source": [
-    "# STRING Operators"
+    "# Iterating through string"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -199,24 +301,30 @@
     }
    ],
    "source": [
-    "print(\"Hell\" in str)\n",
-    "print(\"Haven\" in str)"
+    "print(\"Hell\" in s)\n",
+    "print(\"Haven\" in s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(0, 'A')\n(1, 'B')\n(2, 'C')\n(3, 'D')\n\n1 : A\n2 : B\n3 : C\n4 : D\n"
+      "A\nB\nC\nD\n\n(0, 'A')\n(1, 'B')\n(2, 'C')\n(3, 'D')\n\n1 : A\n2 : B\n3 : C\n4 : D\n"
      ]
     }
    ],
    "source": [
+    "for e in \"ABCD\":\n",
+    "    print(e)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# To get also indexes use enumerate()\n",
     "for e in enumerate(\"ABCD\"):\n",
     "    print(e)\n",
     "\n",
@@ -225,6 +333,125 @@
     "for i,v in enumerate(\"ABCD\"):\n",
     "    print(f\"{i+1} : {v}\")"
    ]
+  },
+  {
+   "source": [
+    "# Methods related to Strings"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'hello world'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# to lowercase:\n",
+    "s.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'HELLO WORLD'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "# to uppercase:\n",
+    "s.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "# Capital first char of each Word\n",
+    "s.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "# returns the first index of the world , -1 otherwise\n",
+    "\n",
+    "s.find(\"llo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Hello', 'World']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "s.split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "source": [
@@ -352,6 +579,102 @@
     "print(\"Pi is ~ {0:20f}\".format(22/7))\n",
     "print(\"Pi is ~ {0:<20f}\".format(22/7))\n",
     "print(\"Pi is ~ {0:<20.20f}\".format(22/7))"
+   ]
+  },
+  {
+   "source": [
+    "# Few Operations on Strings"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'abcpqr'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "\"abc\" + \"pqr\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-67b336e1625b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# cannnot concatenate other data type\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;34m\"abc\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "# cannnot concatenate other data type\n",
+    "\"abc\" + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'abc 1'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "# type conversion is the way\n",
+    "\"abc \" + str(1)\n",
+    "\n",
+    "# Note: TypeError: 'str' object is not callable (Python)\n",
+    "\n",
+    "# You can get this error if you have variable `str` and trying to call `str() function.\n",
+    "\n",
+    "# Resolve with: `del str` \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'*****'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "\"*\"*5"
    ]
   },
   {
