--- a/Py/03list/list.ipynb
+++ b/Py/03list/list.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python388jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "name": "python3",
    "display_name": "Python 3.8.8 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
@@ -23,26 +26,154 @@
  "cells": [
   {
    "source": [
-    "# LIST"
+    "# LIST\n",
+    "\n",
+    "### Indexing/Slicing of List works same as String\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Java\nC\nC++\nKotlin\nTypeScript\n\nat 3: C++\nfirst 2 item: ['Java', 'C']\nlast: TypeScript\n\n2\n8\n4\n"
+      "1\n6\n[2, 3, 4, 5]\n[5, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6]\n",
+    "\n",
+    "print(l[0])\n",
+    "print(l[-1])\n",
+    "print(l[1:-1])\n",
+    "\n",
+    "# because of mutable property\n",
+    "my_list[0] = 5\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "source": [
+    "## Some methods for list "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add the given element at the end of the list\n",
+    "l.append(33)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 10, 2, 3, 4, 5, 6, 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert 10 at index 1\n",
+    "l.insert(1,10)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 10, 2, 3, 4, 5, 6]\n[1, 2, 3, 4, 5, 6]\n[2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pop():\n",
+    "# delete the last element\n",
+    "# can also delete from specified index\n",
+    "l.pop()\n",
+    "print(l)\n",
+    "l.pop(1)\n",
+    "print(l)\n",
+    "\n",
+    "# remove(idx)\n",
+    "l.remove(1)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[6, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reverse\n",
+    "l.reverse()\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nJava\nC\nC++\nKotlin\nTypeScript\n\nat 3: C++\nfirst 2 item: ['Java', 'C']\nlast: TypeScript\n\n2\n8\n4\n"
      ]
     }
    ],
    "source": [
     "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
+    "\n",
+    "v = \"C\" in programming_lan\n",
+    "print(v)\n",
     "\n",
     "# looping\n",
     "for lan in programming_lan:\n",
@@ -65,65 +196,86 @@
   },
   {
    "source": [
-    "## Appending"
+    "## List Comprehension"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Please add options from the list below:\n",
-      "1:Java\n",
-      "2:C\n",
-      "3:C++\n",
-      "4:Kotlin\n",
-      "5:TypeScript\n",
-      "\n",
-      "Adding 1\n",
-      "Adding 1\n",
-      "Adding 2\n",
-      "Adding 3\n",
-      "Selected Language: ['Java', 'Java', 'C', 'C++']\n"
+      "[1, 4, 9, 16, 25, 36]\n[1, 16, 81, 256, 625, 1296]\n"
      ]
     }
    ],
    "source": [
-    "op =\"xx\"\n",
-    "lan = []\n",
+    "l = [1,2,3,4,5,6]\n",
+    "# creating a new list of squares of each element\n",
+    "new_l = []\n",
+    "for el in l:\n",
+    "    new_l.append(el**2)\n",
     "\n",
-    "while op !='0':\n",
-    "    if op in \"12345\":\n",
-    "        print(f\"Adding {op}\")\n",
-    "        if op == '1':\n",
-    "            lan.append(\"Java\")\n",
-    "        elif op =='2':\n",
-    "            lan.append(\"C\")\n",
-    "        elif op =='3':\n",
-    "            lan.append(\"C++\")\n",
-    "        elif op =='4':\n",
-    "            lan.append(\"Kotlin\")\n",
-    "        elif op =='5':\n",
-    "            lan.append(\"TypeScript\")\n",
-    "    else:\n",
-    "        print(\"Please add options from the list below:\")\n",
-    "        print(\"1:Java\")\n",
-    "        print(\"2:C\")\n",
-    "        print(\"3:C++\")\n",
-    "        print(\"4:Kotlin\")\n",
-    "        print(\"5:TypeScript\")\n",
-    "        print()\n",
-    "    \n",
-    "    op = input()\n",
+    "print(new_l)\n",
     "\n",
-    "print(f\"Selected Language: {lan}\")\n",
-    "      "
+    "# With List Comprehension:\n",
+    "\n",
+    "new_l = [el**2 for el in new_l] # [(What to Store ) for each element of list]\n",
+    "print(new_l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, True, 98.4, [6, 9, 1], 'Py']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# e.g of heterogenous list\n",
+    "\n",
+    "l2 = [4,True,98.4,[6,9,1],\"Py\"]\n",
+    "print(l2)"
+   ]
+  },
+  {
+   "source": [
+    "### 2D list "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n[4, 5, 6]\n4\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_2d = [[1,2,3],[4,5,6,],[7,8,9]]\n",
+    "print(list_2d)\n",
+    "\n",
+    "# accessing element in 2D list\n",
+    "print(list_2d[1])\n",
+    "print(list_2d[1][0])\n"
    ]
   },
   {
@@ -307,6 +459,69 @@
     "copy =l.copy()\n",
     "print(copy)\n",
     "# copy() is more efficient "
+   ]
+  },
+  {
+   "source": [
+    "# Examples"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Please add options from the list below:\n",
+      "1:Java\n",
+      "2:C\n",
+      "3:C++\n",
+      "4:Kotlin\n",
+      "5:TypeScript\n",
+      "\n",
+      "Adding 1\n",
+      "Adding 1\n",
+      "Adding 2\n",
+      "Adding 3\n",
+      "Selected Language: ['Java', 'Java', 'C', 'C++']\n"
+     ]
+    }
+   ],
+   "source": [
+    "op =\"xx\"\n",
+    "lan = []\n",
+    "\n",
+    "while op !='0':\n",
+    "    if op in \"12345\":\n",
+    "        print(f\"Adding {op}\")\n",
+    "        if op == '1':\n",
+    "            lan.append(\"Java\")\n",
+    "        elif op =='2':\n",
+    "            lan.append(\"C\")\n",
+    "        elif op =='3':\n",
+    "            lan.append(\"C++\")\n",
+    "        elif op =='4':\n",
+    "            lan.append(\"Kotlin\")\n",
+    "        elif op =='5':\n",
+    "            lan.append(\"TypeScript\")\n",
+    "    else:\n",
+    "        print(\"Please add options from the list below:\")\n",
+    "        print(\"1:Java\")\n",
+    "        print(\"2:C\")\n",
+    "        print(\"3:C++\")\n",
+    "        print(\"4:Kotlin\")\n",
+    "        print(\"5:TypeScript\")\n",
+    "        print()\n",
+    "    \n",
+    "    op = input()\n",
+    "\n",
+    "print(f\"Selected Language: {lan}\")\n",
+    "      "
    ]
   }
  ]
