Py: random module v1

--- a/Py/08modules/built_in/random/py_random.ipynb
+++ b/Py/08modules/built_in/random/py_random.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python388jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
-   "display_name": "Python 3.8.8 64-bit ('ProgramData': virtualenv)"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
@@ -23,27 +26,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello World\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.24067442440369669"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
     }
    ],
    "source": [
-    "print(\"Hello World\")"
+    "import random\n",
+    "random.random()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "10.098038216172025"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "# always 10.xxxx\n",
+    "random.random()+10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "7.373576591943985"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "# between 1.xx.. - 10.xxxx\n",
+    "random.random()*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 92
+    }
+   ],
+   "source": [
+    "# between 10 to 50\n",
+    "from random import random\n",
+    "round(random()*50+10)"
+   ]
   }
  ]
 }
