--- a/Py/08modules/built_in/random/py_random.ipynb
+++ b/Py/08modules/built_in/random/py_random.ipynb
@@ -26,22 +26,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['BPF', 'LOG4', 'NV_MAGICCONST', 'RECIP_BPF', 'Random', 'SG_MAGICCONST', 'SystemRandom', 'TWOPI', '_Sequence', '_Set', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '_accumulate', '_acos', '_bisect', '_ceil', '_cos', '_e', '_exp', '_inst', '_log', '_os', '_pi', '_random', '_repeat', '_sha512', '_sin', '_sqrt', '_test', '_test_generator', '_urandom', '_warn', 'betavariate', 'choice', 'choices', 'expovariate', 'gammavariate', 'gauss', 'getrandbits', 'getstate', 'lognormvariate', 'normalvariate', 'paretovariate', 'randint', 'random', 'randrange', 'sample', 'seed', 'setstate', 'shuffle', 'triangular', 'uniform', 'vonmisesvariate', 'weibullvariate']\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.24067442440369669"
+       "0.5059455672116634"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 1
     }
    ],
    "source": [
     "import random\n",
+    "print(dir(random))\n",
     "random.random()"
    ]
   },
