--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,7 @@
     }
    ],
    "source": [
+    "\n",
     "l = [1,2,3,4,5,6]\n",
     "\n",
     "print(l[0])\n",
@@ -54,13 +55,145 @@
     "print(l[1:-1])\n",
     "\n",
     "# because of mutable property\n",
-    "my_list[0] = 5\n",
-    "print(my_list)"
+    "l[0] = 5\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = list(range(20))\n",
+    "print(numbers[::2])"
+   ]
+  },
+  {
+   "source": [
+    "### List Unpacking"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n1\n[2, 3, 4]\n0\n4\n[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rest equivalent\n",
+    "n = list(range(5))\n",
+    "first,second,*other =n\n",
+    "\n",
+    "print(first)\n",
+    "print(second)\n",
+    "print(other)\n",
+    "\n",
+    "first,*other,last =n\n",
+    "\n",
+    "print(first)\n",
+    "print(last)\n",
+    "print(other)"
+   ]
+  },
+  {
+   "source": [
+    "### iteration"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nJava\nC\nC++\nKotlin\nTypeScript\n\n(0, 'Java')\n(1, 'C')\n(2, 'C++')\n(3, 'Kotlin')\n(4, 'TypeScript')\n\n1: Java\n2: C\n3: C++\n4: Kotlin\n5: TypeScript\n"
+     ]
+    }
+   ],
+   "source": [
+    "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
+    "\n",
+    "v = \"C\" in programming_lan\n",
+    "print(v)\n",
+    "\n",
+    "# looping\n",
+    "for lan in programming_lan:\n",
+    "    print(lan)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# looping with enumerate()\n",
+    "for lan in enumerate(programming_lan):\n",
+    "    print(lan)\n",
+    "\n",
+    "print()\n",
+    "# also returns each item with its index postion.\n",
+    "for i,v in enumerate(programming_lan):\n",
+    "    print(f\"{i+1}: {v}\")\n"
    ]
   },
   {
    "source": [
     "## Some methods for list "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### add"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5, 2, 3, 4, 5, 6, 33]\n[5, 10, 2, 3, 4, 5, 6, 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add the given element at the end of the list\n",
+    "l.append(33)\n",
+    "print(l)\n",
+    "# insert 10 at index 1\n",
+    "l.insert(1,10)\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "source": [
+    "### remove"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -74,45 +207,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 33]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# add the given element at the end of the list\n",
-    "l.append(33)\n",
-    "print(l)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[1, 10, 2, 3, 4, 5, 6, 33]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# insert 10 at index 1\n",
-    "l.insert(1,10)\n",
-    "print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[1, 10, 2, 3, 4, 5, 6]\n[1, 2, 3, 4, 5, 6]\n[2, 3, 4, 5, 6]\n"
+      "[5, 10, 2, 3, 4, 5, 6]\n[5, 2, 3, 4, 5, 6]\n[2, 3, 4, 5, 6]\n[5, 6]\n[]\n"
      ]
     }
    ],
@@ -125,8 +220,14 @@
     "l.pop(1)\n",
     "print(l)\n",
     "\n",
-    "# remove(idx)\n",
-    "l.remove(1)\n",
+    "# remove()\n",
+    "l.remove(5)\n",
+    "print(l)\n",
+    "\n",
+    "del l[0:3]\n",
+    "print(l)\n",
+    "\n",
+    "l.clear()\n",
     "print(l)"
    ]
   },
@@ -150,108 +251,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "True\nJava\nC\nC++\nKotlin\nTypeScript\n\nat 3: C++\nfirst 2 item: ['Java', 'C']\nlast: TypeScript\n\n2\n8\n4\n"
-     ]
-    }
-   ],
    "source": [
-    "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
-    "\n",
-    "v = \"C\" in programming_lan\n",
-    "print(v)\n",
-    "\n",
-    "# looping\n",
-    "for lan in programming_lan:\n",
-    "    print(lan)\n",
-    "\n",
-    "# accessing List\n",
-    "print()\n",
-    "print(f\"at 3: {programming_lan[2]}\") \n",
-    "print(f\"first 2 item: {programming_lan[0:2]}\") \n",
-    "print(f\"last: {programming_lan[-1]}\") \n",
-    "\n",
-    "#common methods:\n",
-    "print()\n",
-    "l=[2,4,6,8]\n",
-    "print(min(l))\n",
-    "print(max(l))\n",
-    "print(len(l))\n",
-    "\n"
-   ]
-  },
-  {
-   "source": [
-    "## List Comprehension"
+    "### Finding Items"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 4, 9, 16, 25, 36]\n[1, 16, 81, 256, 625, 1296]\n"
+      "0\n1\n"
      ]
     }
    ],
    "source": [
-    "l = [1,2,3,4,5,6]\n",
-    "# creating a new list of squares of each element\n",
-    "new_l = []\n",
-    "for el in l:\n",
-    "    new_l.append(el**2)\n",
+    "letters = [\"a\",\"b\",\"c\"]\n",
+    "print(letters.count(\"d\"))\n",
     "\n",
-    "print(new_l)\n",
-    "\n",
-    "# With List Comprehension:\n",
-    "\n",
-    "new_l = [el**2 for el in new_l] # [(What to Store ) for each element of list]\n",
-    "print(new_l)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[4, True, 98.4, [6, 9, 1], 'Py']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# e.g of heterogenous list\n",
-    "\n",
-    "l2 = [4,True,98.4,[6,9,1],\"Py\"]\n",
-    "print(l2)"
+    "if \"b\" in letters:\n",
+    "    print(letters.index(\"b\"))"
    ]
   },
   {
    "source": [
-    "### 2D list "
+    "## 2D list "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -276,76 +305,6 @@
     "# accessing element in 2D list\n",
     "print(list_2d[1])\n",
     "print(list_2d[1][0])\n"
-   ]
-  },
-  {
-   "source": [
-    "## Built-in Function:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### enumerate():\n",
-    "##### returns each item with its index postion."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(0, 'Java')\n(1, 'C')\n(2, 'C++')\n(3, 'Kotlin')\n(4, 'TypeScript')\n\n1: Java\n2: C\n3: C++\n4: Kotlin\n5: TypeScript\n"
-     ]
-    }
-   ],
-   "source": [
-    "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
-    "\n",
-    "# looping\n",
-    "for lan in enumerate(programming_lan):\n",
-    "    print(lan)\n",
-    "\n",
-    "print()\n",
-    "\n",
-    "for i,v in enumerate(programming_lan):\n",
-    "    print(f\"{i+1}: {v}\")\n",
-    "\n",
-    "str"
-   ]
-  },
-  {
-   "source": [
-    "### any(iterable)\n",
-    "##### returns True if any element of the iterable is true. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "True\nFalse\nFalse\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(any([1,0]))\n",
-    "print(any([False,0,\"\",]))\n",
-    "print(any([]))"
    ]
   },
   {
@@ -389,76 +348,243 @@
    ]
   },
   {
-   "source": [
-    "## Generating List"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n\n['10', '11', '12', '13', '14']\n"
+      "[('product 2', 5), ('product 1', 10), ('product 5', 23), ('product 4', 45)]\n"
      ]
     }
    ],
    "source": [
-    "lists =[]\n",
-    "for i in range(1,10):\n",
-    "    lists.append(str(i))\n",
-    "print(lists)\n",
+    "items = [\n",
+    "    (\"product 1\",10),\n",
+    "    (\"product 2\",5),\n",
+    "    (\"product 4\",45),\n",
+    "    (\"product 5\",23),\n",
+    "]\n",
     "\n",
-    "print()\n",
+    "def sorted_item(i):\n",
+    "    return i[1] #return price\n",
     "\n",
-    "lists = [str(i) for i in range(10,15)]\n",
-    "print(lists)"
+    "items.sort(key=sorted_item)\n",
+    "print(items)"
    ]
   },
   {
    "source": [
-    "## Creating List"
+    "#### Using lembda:\n",
+    "\n",
+    "syntax:\n",
+    "\n",
+    "`lembda parameters:expression` "
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 2, 3, 4, 5, 6]\n\n[6, 5, 4, 3, 2, 1]\n\n[1, 2, 3, 4, 5, 6]\n[1, 2, 3, 4, 5, 6]\n"
+      "[('product 2', 5), ('product 1', 10), ('product 5', 23), ('product 4', 45)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [\n",
+    "    (\"product 1\",10),\n",
+    "    (\"product 2\",5),\n",
+    "    (\"product 4\",45),\n",
+    "    (\"product 5\",23),\n",
+    "]\n",
+    "# def sorted_item(i):\n",
+    "#     return i[1]\n",
+    "items.sort(key=lambda i:i[1])\n",
+    "print(items)"
+   ]
+  },
+  {
+   "source": [
+    "## Map Function"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[10, 5, 45, 23]\n\n<class 'map'>\n[10, 5, 45, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [\n",
+    "    (\"product 1\",10),\n",
+    "    (\"product 2\",5),\n",
+    "    (\"product 4\",45),\n",
+    "    (\"proeduct 5\",23),\n",
+    "]\n",
+    "# extracting price from list of tuples\n",
+    "prices = []\n",
+    "for item in items:\n",
+    "    prices.append(item[1])\n",
+    "\n",
+    "print(prices)\n",
+    "print()\n",
+    "# using map\n",
+    "prices_mapped = map(lambda item:item[1],items)\n",
+    "print(type(prices_mapped))\n",
+    "prices = list(prices_mapped)\n",
+    "print(prices)"
+   ]
+  },
+  {
+   "source": [
+    "## Filter Function"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[('product 1', 10), ('product 4', 45), ('proeduct 5', 23)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered = list(filter(lambda item:item[1]>=10,items ))\n",
+    "print(filtered)"
+   ]
+  },
+  {
+   "source": [
+    "## List Comprehension\n",
+    "\n",
+    "`[expression for item in list]`\n",
+    "\n",
+    "```python\n",
+    "letters = list(map(lambda x: x, 'human'))\n",
+    "print(letters) # ['h','u','m','a','n']\n",
+    "\n",
+    "```"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 4, 9, 16, 25, 36]\n[1, 16, 81, 256, 625, 1296]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6]\n",
+    "# creating a new list of squares of each element\n",
+    "new_l = []\n",
+    "for el in l:\n",
+    "    new_l.append(el**2)\n",
+    "\n",
+    "print(new_l)\n",
+    "\n",
+    "# With List Comprehension:\n",
+    "\n",
+    "new_l = [el**2 for el in new_l] # [(What to Store ) for each element of list]\n",
+    "print(new_l)\n"
+   ]
+  },
+  {
+   "source": [
+    "### Replacing Map and Filter function with list comprehension"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[10, 5, 45, 23]\n[('product 1', 10), ('product 4', 45), ('proeduct 5', 23)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [\n",
+    "    (\"product 1\",10),\n",
+    "    (\"product 2\",5),\n",
+    "    (\"product 4\",45),\n",
+    "    (\"proeduct 5\",23),\n",
+    "]\n",
+    "\n",
+    "# prices = list(map(lambda item:item[1],items))\n",
+    "prices = [item[1] for item in items]\n",
+    "# filtered = list(filter(lambda item:item[1]>=10,items ))\n",
+    "filtered = [item for item in items if item[1] >= 10]\n",
+    "\n",
+    "\n",
+    "print(prices)\n",
+    "print(filtered)"
+   ]
+  },
+  {
+   "source": [
+    "## Zip Function"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[(1, 10), (2, 20), (3, 30)]\n[('a', 1, 10), ('b', 2, 20), ('c', 3, 30)]\n"
      ]
     }
    ],
    "source": [
     "l1 = [1,2,3]\n",
-    "l2= [4,5,6]\n",
-    "l=l1+l2\n",
-    "print(l)\n",
-    "print()\n",
+    "l2= [10,20,30]\n",
     "\n",
-    "l3=sorted(l,reverse=True)\n",
-    "print(l3)\n",
-    "\n",
-    "# digits = list('22')\n",
-    "# print(digits)\n",
-    "\n",
-    "print()\n",
-    "copy = l[:]\n",
-    "print(copy)\n",
-    "copy =l.copy()\n",
-    "print(copy)\n",
-    "# copy() is more efficient "
+    "print(list(zip(l1,l2)))\n",
+    "print(list(zip(\"abc\",l1,l2)))"
    ]
   },
   {
