--- a/Py/06dictionaries/dictionaries.ipynb
+++ b/Py/06dictionaries/dictionaries.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 1
     }
    ],
    "source": [
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "None\n"
+      "None\ndefault_value\n"
      ]
     }
    ],
@@ -126,12 +126,15 @@
     "# no error with .get()\n",
     "user_info.get('loves')\n",
     "u = user_info.get('loves')\n",
+    "print(u)\n",
+    "\n",
+    "u = user_info.get('loves','default_value')\n",
     "print(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -213,33 +216,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "name  :  Soikat\nage  :  69\nhobby  :  ['Gamming', 'Coding', 'Football']\n"
+      "name  :  Soikat\nage  :  69\nhobby  :  ['Gamming', 'Coding', 'Football']\n\nname  :  Soikat\nage  :  69\nhobby  :  ['Gamming', 'Coding', 'Football']\n"
      ]
     }
    ],
    "source": [
     "# iterate\n",
     "for k,v in user_info.items():\n",
-    "    print(k,\" : \",v)"
+    "    print(k,\" : \",v)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for k in user_info:\n",
+    "    print(k,\" : \",user_info[k])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['Gamming', 'Coding', 'Football']\n{'name': 'Soikat', 'age': 69}\n"
+      "['Gamming', 'Coding', 'Football']\n{'name': 'Soikat', 'age': 69}\n{'name': 'Soikat'}\n"
      ]
     }
    ],
@@ -247,19 +255,22 @@
     "# delete key with value\n",
     "deleted_value = user_info.pop('hobby')\n",
     "print(deleted_value)\n",
+    "print(user_info)\n",
+    "\n",
+    "del user_info[\"age\"]\n",
     "print(user_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'name': 'DevSR', 'age': 69}\n"
+      "{'name': 'DevSR'}\n"
      ]
     }
    ],
