Py: dict comprehensions

--- a/Py/06dictionaries/dictionaries.ipynb
+++ b/Py/06dictionaries/dictionaries.ipynb
@@ -279,6 +279,46 @@
     "user_info['name'] = \"DevSR\"\n",
     "print(user_info)"
    ]
+  },
+  {
+   "source": [
+    "## Dictionary Comprehensions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 2, 4, 6, 8]\n[0, 2, 4, 6]\n\n{0: 0, 1: 2, 2: 4, 3: 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = []\n",
+    "for x in range(5):\n",
+    "    values.append(x*2)\n",
+    "print(values)\n",
+    "\n",
+    "# using list comprehensions:\n",
+    "values = [x*2 for x in range(4)]\n",
+    "print(values)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# dict comprehensions:\n",
+    "# values = {}\n",
+    "# for x in range(5):\n",
+    "#     values[x] = x*2\n",
+    "values = {x: x*2 for x in range(4)}\n",
+    "print(values)"
+   ]
   }
  ]
 }
