--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -79,21 +79,21 @@
   },
   {
    "source": [
-    "### List Unpacking"
+    "### Unpacking Operator"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0\n1\n[2, 3, 4]\n0\n4\n[1, 2, 3]\n"
+      "0\n1\n[2, 3, 4]\n\n0\n4\n[1, 2, 3]\n\n[0, 1, 2, 3, 4, 'H', 'e', 'l', 'l', 'o']\n"
      ]
     }
    ],
@@ -106,11 +106,16 @@
     "print(second)\n",
     "print(other)\n",
     "\n",
+    "print()\n",
     "first,*other,last =n\n",
     "\n",
     "print(first)\n",
     "print(last)\n",
-    "print(other)"
+    "print(other)\n",
+    "\n",
+    "print()\n",
+    "n = [*range(5),*\"Hello\"]\n",
+    "print(n)"
    ]
   },
   {
@@ -557,6 +562,84 @@
     "\n",
     "print(prices)\n",
     "print(filtered)"
+   ]
+  },
+  {
+   "source": [
+    "### Difference between Generator Expressions and List Comprehensions\n",
+    "\n",
+    "**What are Generator Expressions?**\n",
+    "\n",
+    "Generator Expressions are somewhat similar to list comprehensions, but the former doesn’t construct list object. Instead of creating a list and keeping the whole sequence in the memory, the generator generates the next element in demand.\n",
+    "When a normal function with a return statement is called, it **terminates** whenever it gets a return statement. But a function with a yield statement **saves the state of the function and can be picked up from the same state, next time the function is called.**\n",
+    "\n",
+    "The Generator Expression allows us to create a generator _without the yield keyword._without\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n<generator object <genexpr> at 0x00000242AFC14C80>\n0 2 4 6 8 10 "
+     ]
+    }
+   ],
+   "source": [
+    "# List Comprehension\n",
+    "list_comprehension = [i for i in range(11) if i % 2 == 0]\n",
+    "  \n",
+    "print(list_comprehension)\n",
+    "\n",
+    "# Generator Expression\n",
+    "generator_expression = (i for i in range(11) if i % 2 == 0)\n",
+    "print(generator_expression)\n",
+    "for i in generator_expression:\n",
+    "    print(i, end=\" \")"
+   ]
+  },
+  {
+   "source": [
+    "**So what’s the difference between Generator Expressions and List Comprehensions?**\n",
+    "\n",
+    "The generator yields one item at a time and generates item only when in demand. Whereas, in a list comprehension, Python reserves memory for the whole list. Thus we can say that the generator expressions are memory efficient than the lists. Generator expressions are also faster than list comprehension and hence time efficient."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "x =  87616\ny =  112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import getsizeof from sys module\n",
+    "from sys import getsizeof\n",
+    "  \n",
+    "comp = [i for i in range(10000)]\n",
+    "gen = (i for i in range(10000))\n",
+    "  \n",
+    "#gives size for list comprehension\n",
+    "x = getsizeof(comp) \n",
+    "print(\"x = \", x)\n",
+    "  \n",
+    "#gives size for generator expression\n",
+    "y = getsizeof(gen) \n",
+    "print(\"y = \", y)"
    ]
   },
   {
