Py: dict unpacking optr , **kwargs

--- a/Py/06dictionaries/dictionaries.ipynb
+++ b/Py/06dictionaries/dictionaries.ipynb
@@ -319,6 +319,75 @@
     "values = {x: x*2 for x in range(4)}\n",
     "print(values)"
    ]
+  },
+  {
+   "source": [
+    "## Unpacking Operator\n",
+    "\n",
+    "`**` is used for dictionaries ...\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a b c\n\n{'a': 1, 'b': 2, 'c': 3}\n\n{'x': 10, 'y': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Unpaking Operator\n",
+    "num_dict = {'a': 1, 'b': 2, 'c': 3}\n",
+    "print(*num_dict) # keys\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "new_dict = {**num_dict}\n",
+    "print(new_dict)\n",
+    "print()\n",
+    "\n",
+    "f= {\"x\":1}\n",
+    "sec ={ \"x\":10,\"y\":2}\n",
+    "comb={**f,**sec}\n",
+    "print(comb) # last 'x' is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'dict'>\nname = Apple\nID = 101\nlanguage = Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# A Python program to demonstrate packing of\n",
+    "# dictionary items using **\n",
+    "def fun(**kwargs):\n",
+    " \n",
+    "    # kwargs is a dict\n",
+    "    print(type(kwargs))\n",
+    " \n",
+    "    # Printing dictionary items\n",
+    "    for key in kwargs:\n",
+    "        print(\"%s = %s\" % (key, kwargs[key]))\n",
+    " \n",
+    "# Driver code\n",
+    "fun(name=\"Apple\", ID=\"101\", language=\"Python\")"
+   ]
   }
  ]
 }
