--- a/Py/10Exceptions&&IO/Exceptions/py_exception.ipynb
+++ b/Py/10Exceptions&&IO/Exceptions/py_exception.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "source": [
-    "## Releasing external resources with`Finally` and 'With`"
+    "## Releasing external resources with`Finally` and `With`"
    ],
    "cell_type": "markdown",
    "metadata": {}
